# TestPOAlternative

./: .env  .gitignore  Cargo.toml  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20221225_181726_tests.rs  m20230602_091749_questions.rs  m20230602_100831_add_questions_in_test.rs
migrations/: tests.sql
src/: main.rs
src/controllers/: test.rs
src/entities/: answer.rs  mod.rs  prelude.rs  question.rs  test.rs  tests.rs
src/middlewares/: mod.rs  result_response.rs  tracing.rs
src/utils/adapters/: page.rs
