[package]
name = "test_po_alternative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
dotenv = "0.15"
env_logger = "0.10.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["macros"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
graphul = "0.5.6"
thiserror = "1.0"

sea-orm = { version = "0.11.1", features = ["runtime-tokio-rustls", "sqlx-mysql", "debug-print"] }
utoipa = { version = "3.1.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["axum"] }
chrono = "0.4.23"
